Fix privacy policy on mobile

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -159,4 +159,9 @@ footer {
   .footer-image {
     top: 5px;
   }
+
+  .privacy .text-container {
+    display: flex;
+    flex-direction: column;
+  }
 }
